[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sem título 1.svg" type="Texture" id=1]
[ext_resource path="res://Sem título 3.svg" type="Texture" id=2]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://600px-Radiation_warning_symbol2.svg.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Abrir Porta"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Porta:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Explodir"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fechar Porta"
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Porta:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1073.0
margin_top = -696.5
margin_right = 1073.0
margin_bottom = 696.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Microondas" type="TextureRect" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 1634.0
margin_bottom = 1093.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Porta" type="TextureRect" parent="CenterContainer"]
margin_left = 512.0
margin_top = 300.0
margin_right = 1634.0
margin_bottom = 1093.0
rect_pivot_offset = Vector2( 140, 0 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_left = 1073.0
margin_top = 696.0
margin_right = 1073.0
margin_bottom = 696.0

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 658.0
margin_top = 237.5
margin_right = 718.0
margin_bottom = 297.5
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mais" type="Button" parent="."]
margin_left = 824.0
margin_top = 455.5
margin_right = 871.0
margin_bottom = 527.5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "+"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menos" type="Button" parent="."]
margin_left = 707.77
margin_top = 454.787
margin_right = 737.77
margin_bottom = 526.787
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "-"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo" type="Label" parent="."]
margin_left = 759.753
margin_top = 114.198
margin_right = 885.753
margin_bottom = 186.198
custom_fonts/font = ExtResource( 3 )
text = "000"
align = 1
valign = 1

[node name="Comida" type="Label" parent="."]
margin_left = 135.753
margin_top = 114.198
margin_right = 347.753
margin_bottom = 186.198
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Comida"
align = 1
valign = 1

[node name="Radiação" type="Label" parent="."]
margin_left = 759.753
margin_top = 238.198
margin_right = 885.753
margin_bottom = 310.198
custom_fonts/font = ExtResource( 3 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Abrir Porta" = SubResource( 1 )
anims/Explodir = SubResource( 3 )
"anims/Fechar Porta" = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]
[connection signal="pressed" from="Mais" to="." method="_on_Mais_pressed"]
[connection signal="pressed" from="Menos" to="." method="_on_Menos_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
